syntax = "proto3";

package account.middleware.transfer.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/account/middleware/v1/transfer";

import "basetypes/v1/conds.proto";

message TransferReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string UserID = 30;
  optional string TargetUserID = 40;
}

message Transfer {
  // @inject_tag: sql:"id"
  uint32 ID = 9;
  // @inject_tag: sql:"ent_id"
  string EntID = 10;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"user_id"
  string UserID = 30;
  // @inject_tag: sql:"target_user_id"
  string TargetUserID = 40;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 1000;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 1010;
  // @inject_tag: sql:"deleted_at"
  uint32 DeletedAt = 1020;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal UserID = 30;
  optional basetypes.v1.StringVal TargetUserID = 40;
}

